BM-17200 Fix: expand/collapse videoconf description

--- a/ui/closures/net.bluemind.calendar.application.closure/src/main/css/calendar.css
+++ b/ui/closures/net.bluemind.calendar.application.closure/src/main/css/calendar.css
@@ -1713,6 +1713,10 @@ div.form-notification {
   vertical-align: middle;
 }
 
+#zippy-videoconferencing {
+  cursor: pointer;
+  font-weight: bold;
+}
 
 /******************************************************************************
  *                          FREEBUSY
